Changelog
=========

v0.9
====

- New: FromJson() de-serializza stream JSON.
- Fix: Make subclass properties writable. Closes #76.
- Fix: ToJson() serializza proprietà che non dovrebbero comparire nel JON.
- Test project now runs as a NetCore 2.1 app. Addresses FatturaElettronica/FatturaElettronica.Core#4.

v0.8.5
======

Released on October 16, 2018.

- New: Validazione errore 00426 per campo 1.1.6 PECDestinatario. Closes #74.
- Fix: errore descrizione in RegimeFiscale "RF17". Closes #72.
- Fix: "Nullable object must have a value" in validazione di blocco ScontoMaggiorazione con Importo = 0. Closes #71.

v0.8.4
======

Released on October 4, 2018.

- Upgrade: FluentValidation to v8.0.100.

v0.8.3
======

Released on October 2, 2018.

- Fix: DettaglioLineeValidator: 00423 non supporta tolleranca di 1 centesimo. Closes #66.

v0.8.2
======

Released on October 1, 2018.

- FatturaElettronica.Core dependency bumped to v0.2.
- Cleanup and refactoring: use auto-properties; remove unnecessary usings.

v0.8.1
======

Rilasciata il 4.7.2018

- Fix: errore lunghezza PECDestinatario in v0.8. Closes #58.

v0.8
====

Rilasciata il 3.7.2018

- Recepite specifiche tecniche Allegato A del 22.6.2018. Closes #52.
- New: rimossi controlli su campo PECDestinatario. Addresses #52.
- New: supporto per TipoDocumento TD020 autofattura. Addresses #52
- Passata la test suite da NET461 a NETCore. Closes #57.

v0.7
====

Rilasciata il 4.10.2017

- Spostata serializzazione su package indipendente FatturaElettronica.Core.
- Abbandonato il profilo PCL in favore di NetStandard 1.1.

v0.6.3
======

Rilasciata il 17.7.2017

- Fix: RappresentanteFiscale viene erroneamente serializzato come 'Rappresentante' causando errore convalida 200 
  da parte del sistema PA. Closes #49.
- README: Aggiunta opzione IgnoreComments a XmlReader per evitare crash nel caso di commenti nel XML. Closes #45.

v0.6.2
======

Rilasciata il 23.5.2017.
