@@ -35,10 +35,6 @@ namespace FatturaElettronica.Validators
                 .Length(7, 256)
                 .When(x => !string.IsNullOrEmpty(x.PECDestinatario));
             RuleFor(x => x.PECDestinatario)
-                .NotEmpty()
-                .When(x => x.CodiceDestinatario == "0000000")
-                .WithErrorCode("00426");
-            RuleFor(x => x.PECDestinatario)
                 .Empty()
                 .When(x => x.CodiceDestinatario != "0000000")
                 .WithErrorCode("00426");
